--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,13 @@ body {
     padding: 140px 0px;
 }
 
+.about-us-sub-title {
+    margin-bottom: 60px;
+    width: 347px;
+    height: 117px;
+    display: block;
+}
+
 .about-us-styled-text {
     color: #005FA3;
 }
@@ -115,10 +122,17 @@ body {
     font-size: 18px;
     font-weight: 300;
     line-height: 25px;
+    width: 445px;
+    height: 245px;
+    display: block;
 }
 
 .about-us-item-elements {
     background-color: #EBEBEB;
+    width: 255px;
+    min-height: 255px;
+    padding: 30px 40px 40px;
+    margin: 0px 15px 30px;
 }
 
 .about-us-element-count {
@@ -127,6 +141,7 @@ body {
     font-size: 55px;
     font-weight: 900;
     line-height: 66px;
+    margin-bottom: 30px;
 }
 .about-us-element-title  {
     color:#000000;
@@ -134,6 +149,7 @@ body {
     font-size: 14px;
     font-weight: 700;
     line-height: 18px;
+    margin-bottom: 47px;
 }
 
 .about-us-element-link {
@@ -149,8 +165,17 @@ body {
     padding: 85px 0px 92px;
 }
 
+.clients-title {
+    margin-bottom: 48px;
+}
+
+.clients-sub-title {
+    margin-bottom: 43px;
+}
+
 .advantage {
     background-color: #EBEBEB;
+    padding: 102px 0 112px;
 }
 
 .advantage-text {
@@ -172,6 +197,11 @@ body {
     font-size: 24px;
     font-weight: 900;
     line-height: 30px;
+    width: 350px;
+    min-height: 360px;
+    display: block;
+    padding: 45px;
+    background-size: cover;
 }
 
 .reviews {
@@ -186,14 +216,24 @@ body {
     font-weight: 400;
     line-height: 25px;
     border: none;
+    width: 270px;
+    height: 60px;
+    margin: 40px 0px 67px;
+}
+
+.display-visibility {
+    display: none;
 }
 
 .reviews-items {
     background-color: #EBEBEB;
+    padding: 40px 90px;
+    margin-bottom: 40px;
 }
 
 .reviews-items-text {
     color: #000000;
+    margin-bottom: 58px;
 }
 
 .reviews-items-name {
@@ -212,9 +252,46 @@ body {
     line-height: 19px;
 }
 
+.review-change-button {
+    width: 60px;
+    height: 60px;
+    border: 0px;
+    padding: 0;
+    background-color: #005FA3;
+}
+.button-disabled {
+    opacity: 0.4;
+}
+
+.review-slider-button {
+    height: 10px;
+    width: 10px;
+    background-color: #005FA3;
+    padding: 0;
+    border: 0;
+    border-radius: 50%;
+    opacity: 0.4;
+}
+
+.slider-active {
+    opacity: 1.0;
+}
+
+.advantage-sub-title {
+    margin-bottom: 27px;
+}
+
+.advantage-elements {
+    width: 348px;
+    height: 316px;
+    padding: 80px 90px 38px 90px;
+    display: block;
+}
+
 .contacts {
     background-color: #090d0f;
     background-image: url(../img/contacts_bg.png);
+    padding: 122px 0px 140px;
 }
 
 .contacts-title {
@@ -223,6 +300,7 @@ body {
     font-size: 48px;
     font-weight: 900;
     line-height: 69px;
+    margin-bottom: 60px;
 }
 
 .contacts-text {
@@ -231,6 +309,8 @@ body {
     font-size: 18px;
     font-weight: 300;
     line-height: 25px;
+    margin-bottom: 75px;
+    width: 445px;
 }
 
 .contacts-link {
