--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,45 @@ body {
 .header {
     padding: 23px 0px 31px;
 }
+
+.header-main-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-logo-wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.header-right-flex-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    width: 550px;
+}
+
+.header-info-flex-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.nav-list-flex-wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+
 .header-title {
     color: #005FA3;
     font-family: "Merriweather";
     font-size: 36px;
     font-weight: 900;
     line-height: 50px;
+    margin-left: 30px;
     
 }
 
@@ -68,19 +101,26 @@ body {
     font-size: 25px;
     font-weight: 400;
     line-height: 34px;
+    text-decoration: none;
 
     width: 333px;
     min-height: 84px;
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
-.desc-link {
-    text-decoration: none;
-}
 
 .service {
     background-color: #EBEBEB;
     padding: 140px 0px;
+}
+
+.service-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .section-title {
@@ -103,6 +143,21 @@ body {
 
 .about-us {
     padding: 140px 0px;
+}
+
+.about-us-flex-container {
+    display: flex;
+}
+
+.about-us-left-flex-container {
+    width: 555.5px;
+}
+
+.about-us-list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 540.5px;
 }
 
 .about-us-sub-title {
@@ -132,7 +187,8 @@ body {
     width: 255px;
     min-height: 255px;
     padding: 30px 40px 40px;
-    margin: 0px 15px 30px;
+    box-sizing: border-box;
+    margin-top: 30px;
 }
 
 .about-us-element-count {
@@ -173,6 +229,12 @@ body {
     margin-bottom: 43px;
 }
 
+.clients-flex-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
 .advantage {
     background-color: #EBEBEB;
     padding: 102px 0 112px;
@@ -188,6 +250,9 @@ body {
 
 .service-item-title {
     color: #FFFFFF;
+    display: flex;
+    align-items: end;
+    width: 170px;
 }
 
 .service-item-link {
@@ -199,9 +264,19 @@ body {
     line-height: 30px;
     width: 350px;
     min-height: 360px;
-    display: block;
+    display: flex;
+    align-items: end;
     padding: 45px;
     background-size: cover;
+    box-sizing: border-box;
+    margin-bottom: 30px;
+}
+
+.advantage-flex-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 107px;
 }
 
 .reviews {
@@ -282,10 +357,18 @@ body {
 }
 
 .advantage-elements {
-    width: 348px;
-    height: 316px;
-    padding: 80px 90px 38px 90px;
+    width: 300px;
+    height: 167px;
+    /* padding: 55px 46px 59px 8px; */
     display: block;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+.adv-img {
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
 }
 
 .contacts {
@@ -322,10 +405,29 @@ body {
     line-height: 29px;
 }
 
+.footer-button {
+    width: 270px;
+    height: 60px;
+    border: 0;
+    background-color: #005FA3;
+    color: #FFFFFF;
+    font-family: "Lato";
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 25px;
+}
+
 .footer-information {
     color: #000000;
     font-family: "Lato";
     font-size: 14px;
     font-weight: 300;
     line-height: 19px;
+    margin: 50px 0;
+}
+
+.footer-flex-wrapper {
+    display: flex;
+    justify-content: space-between;
+    height: 80px;
 }
