--- a/css/style.css
+++ b/css/style.css
@@ -374,7 +374,7 @@ body {
 .contacts {
     background-color: #090d0f;
     background-image: url(../img/contacts_bg.png);
-    padding: 122px 0px 140px;
+    padding: 120px 0px 100px;
 }
 
 .contacts-title {
@@ -396,6 +396,12 @@ body {
     width: 445px;
 }
 
+.contacts-flex-wrapper {
+    display: flex;
+    width: 453px;
+    justify-content: space-between;
+}
+
 .contacts-link {
     color: #FFFFFF;
     text-decoration: none;
@@ -404,6 +410,73 @@ body {
     font-weight: 300;
     line-height: 29px;
 }
+
+.form-info {
+    display: flex;
+}
+
+.form-info-flex-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    width: 80%;
+    align-items: flex-start;
+    align-content: baseline;
+}
+.form-flex-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: right;
+}
+
+.form-contact-wrapper {
+    display: flex; 
+    width: 100%;
+    justify-content: space-between;
+}
+
+.massage-flex-wrapper {
+    width: 100%;
+    margin: 35px 0 50px;
+}
+
+.input-lable {
+    color: #FFFFFF;
+    text-decoration: none;
+    display: block;
+    font-family: Lato;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
+    margin: 0 0 15px;
+
+}
+
+input {
+    width: 255px;
+    padding: 0 0 15px;
+    border: none;
+    border-bottom: 1px solid #FFFFFF;
+    background-color: transparent;
+    font-family: Lato;
+    font-size: 21px;
+    font-weight: 300;
+
+}
+
+textarea {
+    padding: 0 0 15px;
+    border: none;
+    border-bottom: 1px solid #FFFFFF;
+    background-color: transparent;
+    width: 100%;
+    height: 120px;
+    resize: none;
+    font-family: Lato;
+    font-size: 21px;
+    font-weight: 300;
+
+}
+
 
 .footer-button {
     width: 270px;
